TsunDB送信パラメータ修正